# ArbitraryPrecisionArithmetic

./: .gitignore  BigNum.cpp  BigNum.h  CMakeLists.txt  comparisons.cpp  main.cpp  pi.cpp
include/: BigNum.h
src/: BigNum.h  add_binary.cpp  comparisons.cpp  construction.cpp  internals.cpp  mult_binary.cpp  output.cpp  shifts.cpp  trivial_overloads.cpp  unary.cpp
